tests/expectations/compiler/const_generics/const_generics_non_inline.out
Error [EPAR0370047]: expected `import`, `program`, or module item at top level
    --> compiler-test:9:1
     |
   9 | script baz::[N: u32]()  { }
     | ^^^^^^
